--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,15 @@
 	<version>0.0.1</version>
 	<name>my-app</name>
 	<url>http://maven.apache.org</url>
-
+<distributionManagement>
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>corp1</id>
+      <name>Corporate Repository</name>
+      <url>scp://repo/maven2</url>
+      <layout>default</layout>
+    </repository>
+</distributionManagement>
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
