--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
       <uniqueVersion>false</uniqueVersion>
       <id>corp1</id>
       <name>Corporate Repository</name>
-      <url>scp://repo/maven2</url>
+      <url>file:///tmp</url>
       <layout>default</layout>
     </repository>
 </distributionManagement>
